# CrewAI-Resume-Analyzer

./: .gitignore  README.md  pyproject.toml
src/latest_pdf_analyzer/: crew.py  main.py
src/latest_pdf_analyzer/config/: agents.yaml  tasks.yaml
