[project]
name = "latest_pdf_analyzer"
version = "0.1.0"
description = "latest-pdf-analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
latest_pdf_analyzer = "latest_pdf_analyzer.main:run"
run_crew = "latest_pdf_analyzer.main:run"
train = "latest_pdf_analyzer.main:train"
replay = "latest_pdf_analyzer.main:replay"
test = "latest_pdf_analyzer.main:test"
run_with_trigger = "latest_pdf_analyzer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
